Fixed the alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
   .flex-item {
     padding: 5px;
     width: 30%;
-    height: 30%;
     line-height: 200px;
     color: white;
     font-weight: bold;
